assets/css/main.scss
---
---

@import "overkyll-jekyll-theme";
@import "fonts";

body {
	font-family: "Nitti-Light", system, sans-serif;
background-color: #F1F1F1;
color: #1a1a1a;
padding: 15%;
}

a, a:visited, a:active, a:hover, h1 {
    color: #1a1a1a;
    text-decoration: none !important;
}

p {
	opacity: 1 !important;
	
	color: #1a1a1a !important;
}

h1, .h1, h2, .h2, h3, .h3, label, legend {
	font-family: "Nitti-Light", system, sans-serif;
  font-size: 1em;
  color: #1a1a1a;
  font-weight: 600;
  display: inline-block;
  margin-top: 5px;
  margin-bottom: 40px;
	line-height: 1em;
}


h5 {
	margin-top: 25px;
	font-weight: 600;
}

.instantclick-bar {
  background: #0f53fb !important;
}

.title {
	display: inline-block;
	font-weight: 500;
}

.title a {
  color: #1a1a1a;
}

.post {
    margin: auto;
    position: relative;
		width: 100%;

}

article {
font-family: 'Work Sans', sans-serif;

}

article.post a {
	position: relative;
	display: inline-block;
	background: url(../images/highlight.png);
	background-position: 2px 10px;
	background-repeat: no-repeat;
	padding-right: 5px;
	padding-top: 0;
	background-size: 100%;
}

.post img {
	-webkit-box-shadow: 10px 21px 49px -5px rgba(0,0,0,0.75);
-moz-box-shadow: 10px 21px 49px -5px rgba(0,0,0,0.75);
box-shadow: 10px 21px 49px -5px rgba(0,0,0,0.75);
margin-top: 40px;
margin-bottom: 40px;
}

.post-title {
	margin: 0;
	text-decoration: none;
	display: inline-block;
	margin-bottom: 10px;
	font-size: 1em;
	padding-right: 5px;
	left: 0 !important;
	width: auto !important;
	line-height: 1.5em !important;
}

main {
	max-width: 800px;
	width: 100%;
}

.highlighter-rouge .highlight {
    background: #eef;
    padding-left: 0;
    padding-right: 0;
    display: inline-block;
    width: 100%;
}


@media only screen and (max-width: 37.437em) {
  .nav-main {
		overflow-y: visible !important;
    height: 40px !important;
    border-top: 0px solid;
    border-bottom: 0px solid;

	}

	}

.nav-main li {
    display: inline-block;
    text-align: center;
    padding: 0;
}

.nav-main ul li {
	padding-bottom: 15px;
	width: auto;
}

.nav-main ul {
padding: 0 !important;
margin: 0;
min-width: 100%;
list-style: none;
text-align: left;
margin-top: 20px;
}

a.site-title {
	font-family: "Bagnard";
	color: #0F53FB;
}

.site-header {
	padding: 0;
	margin-bottom: 0;
}

a.page-link {
  font-size: 1em;
	color: #1a1a1a;
	padding-right: 15px;
	font-weight: 100;
}

a.page-link::before {
	content: '#';
}

.posts-archive__links {
	width: 100%;
	float: left;
}

.posts-archive li {
	    border-bottom: 2px solid #fff;
}

.posts-archive__links a {
color: #1a1a1a;
font-weight: 500;
}

.posts-archive > li:not(:last-child):after {
    content: '';
}

.posts-archive li {
    display: block;
    position: relative;
}

.posts {
	display: inline-block;
}

.embed-container {
	margin-bottom: 25px;
}

p {
}

.post-meta {
	position: relative;
	color: #ccc;
	font-weight: bold;
	display: inline-block;
	margin-bottom: 0;
	line-height: 0px;
	margin: auto;
	font-family: 'Nitti-Light';

}

.post-meta span:nth-child(1) {
	color: #f00;
	background-color: #ffc0cb;
}

.post-meta span:nth-child(2) {
	color: #00f;
	background-color: #fff;
}

.post-meta span:nth-child(3) {
	color: #808080;
	background-color: #ff0;
}



.wrapper {
	 max-width: inherit;
	 margin: 0;
	 padding-left: 0;
	 display: inline-block;
	 max-width: 1200px;
	 width: 100%;
}

.site-header-top {
    padding-left: 0;
}

.site-logo {
	font-size: 140%;
	width: 100%;
	text-align: left;
}

h2#date
 {
	 margin: 0;
	 position: relative;
background-color: #cf0;
line-height: 3px;
width: auto;
padding-right: 5px;
padding-bottom: 10px;
margin: auto;
display: inline-block;
 }

a.active {
	color: #0F53FB;
}

.post-header {
	opacity: 1;
  text-decoration: none;
  display: inline-block;
  width: 100%;
	margin-bottom: 20px;
	font-size: 1em;

}

.post-header h1 {
left: 0 !important;
line-height: 1.5em !important;
}

.post {
	padding-bottom: 20px;
	padding-left: 0;
}

.pagination--item {
padding: 0;
}

footer {
	margin-top: 10%;
}


footer span {
	font-size: 20px;
}

ul {
	margin: 0;
	padding: 0;
}

ul li {
float: left;
list-style-type: none;
padding-right: 10px;
width: auto;
}

footer img {
	width: 20px;
}

footer ul li img {
	opacity: .3;
}

